package br.fatec.banco;

public interface Financiamento {

	
	public Double financiar(Conta conta, Double valor);
}
